--- a/TravelPal/MainWindow.xaml
+++ b/TravelPal/MainWindow.xaml
@@ -5,8 +5,39 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:TravelPal"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="TravelPal" Height="450" Width="600" ResizeMode="NoResize" Background="MintCream">
     <Grid>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="30"/>
+            <ColumnDefinition/>
+            <ColumnDefinition/>
+            <ColumnDefinition/>
+            <ColumnDefinition/>
+            <ColumnDefinition Width="30"/>
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="30"/>
+            <RowDefinition/>
+            <RowDefinition/>
+            <RowDefinition/>
+            <RowDefinition/>
+            <RowDefinition/>
+            <RowDefinition/>
+            <RowDefinition Height="30"/>
+        </Grid.RowDefinitions>
+        <Label Content="TravelPal" FontFamily="Arial" FontSize="60" Grid.Column="1" Grid.Row="1" Grid.ColumnSpan="2" Grid.RowSpan="2" HorizontalAlignment="Center" VerticalAlignment="Center" FontWeight="Bold"/>
+        
+        <Label Content="Username:" Grid.Row="3" Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Center" Margin="5" FontWeight="Black"/>
+        <TextBox Name="UsernameTextBox" Grid.Row="3" Grid.Column="2" Grid.ColumnSpan ="2" Height="30" Width="200" />
+
+        <Label Content="Password:" Grid.Row="4" Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Center" Margin="5" FontWeight="Black"/>
+        <PasswordBox Name="PasswordBox" Grid.Row="4" Grid.Column="2" Grid.ColumnSpan ="2" Height="30" Width="200"/>
+        
+        <!-- Sign In Button -->
+        <Button Content="Sign In" Grid.Row="5" Grid.Column="3" Width="80" HorizontalAlignment="Center" Height="30" />
+
+        <!-- Register Button -->
+        <Button Content="Register" Grid.Row="5" Grid.Column="2" Width="80" HorizontalAlignment="Center" Height ="30" />
 
     </Grid>
 </Window>
