--- a/TravelPal/Windows/AddTravelWindow.xaml
+++ b/TravelPal/Windows/AddTravelWindow.xaml
@@ -21,21 +21,23 @@
             <RowDefinition/>
             <RowDefinition/>
             <RowDefinition/>
-            <RowDefinition/>
+            <RowDefinition Height="Auto"/>
             <RowDefinition Height="30"/>
         </Grid.RowDefinitions>
         <Label Content="Add your trip" FontFamily="Arial" FontSize="25" Grid.Column="1" Grid.ColumnSpan="2" Grid.Row="1" HorizontalAlignment="left" VerticalAlignment="Center" FontWeight="Bold"/>
 
-        
-        <TextBox Name="txtbCountry" Grid.Row="2" Grid.Column="2" HorizontalAlignment="Center" Height="20" Width="125" />
+
+        <TextBox x:Name="txtbCountry" Grid.Row="2" Grid.Column="2" HorizontalAlignment="Center" Height="20" Width="125" IsEnabled="False"/>
         <Label Content="Country: " Grid.Row="2" Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Center" Margin="5" FontWeight="Black"/>
-        <TextBox Name="txtbCity" Grid.Row="3" Grid.Column="2" HorizontalAlignment="Center" Height="20" Width="125" />
+        <TextBox x:Name="txtbCity" Grid.Row="3" Grid.Column="2" HorizontalAlignment="Center" Height="20" Width="125" />
         <Label Content="City: " Grid.Row="3" Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Center" Margin="5" FontWeight="Black"/>
-        <TextBox Name="txtbPassangers" Grid.Row="4" Grid.Column="2" HorizontalAlignment="Center" Height="20" Width="125" />
+        <TextBox x:Name="txtbPassangers" Grid.Row="4" Grid.Column="2" HorizontalAlignment="Center" Height="20" Width="125" />
         <Label Content="Passanger(s): " Grid.Row="4" Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Center" Margin="5" FontWeight="Black"/>
         <!--TODO: -->
         <!--Om ingen resa är markerad: MessageBox. "Choose a destination to see the details or to remove it" -->
-        <ComboBox Name="cb1Travel" HorizontalAlignment="Center" VerticalAlignment="Center" Grid.Column="3" Grid.Row="2" Width="80" Height="15"/>
+        <Label Content="Country of destination" Grid.Column="3" Grid.Row="1" HorizontalAlignment="Center"  VerticalAlignment="Bottom" FontSize="10"/>
+        <ComboBox x:Name="cbcCountry"  HorizontalAlignment="Center" VerticalAlignment="Center" Grid.Column="3" Grid.Row="2" Width="80" Height="15"/>
+        <ComboBox x:Name="cbTypeTrip" HorizontalAlignment="Left" VerticalAlignment="center" Grid.Column="2" Grid.Row="5" Width="40" Height="15"/>
 
         <!--för att välja ett land som resan ska till???????-->
         <!--ComboBox Name="cb2" HorizontalAlignment="Center" VerticalAlignment="Center" Grid.Column="2" Grid.Row="5" Width="80" Height="15"-->
@@ -43,7 +45,12 @@
 
         <!--TODO: -->
         <!-- Om textbox tom: Varningsruta om att fylla i alla uppgifter -->
-        <Button Content="Add trip" Name="bttnSave" Grid.Row="6" Grid.Column="2" Width="80" HorizontalAlignment="Center" Height ="15" FontSize="10"/>
+        <Button Content="Add trip" x:Name="bttnSave" Grid.Row="5" Grid.Column="4" Width="100" HorizontalAlignment="Right" VerticalAlignment="Bottom" Height="30" FontSize="10"/>
+        <Label Content="type of trip: " VerticalAlignment="Top" HorizontalAlignment="Left" Grid.Column="2" Grid.Row="5" FontSize="7" FontWeight="Bold"/>
+        <CheckBox Grid.Column="2" Content="All inclusive" HorizontalAlignment="Left" Margin="45,0,0,0" Grid.Row="5" VerticalAlignment="Center" FontSize="10" />
+
+        <TextBox x:Name="txbWorkTrip" Grid.Row="5" Grid.Column="3" Height="40" Width="120" VerticalAlignment="Center" HorizontalAlignment="Center" Visibility="Visible"/>
+        <Label Content="Meeting details" FontSize="8" Grid.Column="3" Grid.Row="5" HorizontalAlignment="Left" VerticalAlignment="Top" Visibility="Visible"/>
 
 
 
