--- a/TravelPal/Windows/MainWindow.xaml
+++ b/TravelPal/Windows/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:TravelPal"
         mc:Ignorable="d"
-        Title="TravelPal" Height="450" Width="600" ResizeMode="NoResize" Background="MintCream">
+        Title="TravelPal" Height="450" Width="600" ResizeMode="NoResize" Background="MediumSlateBlue">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="30"/>
@@ -25,17 +25,17 @@
             <RowDefinition/>
             <RowDefinition Height="30"/>
         </Grid.RowDefinitions>
-        <Label Content="TravelPal" FontFamily="Arial" FontSize="55" Grid.Column="1" Grid.Row="1" Grid.ColumnSpan="2" Grid.RowSpan="2" HorizontalAlignment="Center" VerticalAlignment="Center" FontWeight="Bold"/>
+        <Label Content="TravelPal" Foreground="MintCream" FontFamily="Arial" FontSize="55" Grid.Column="1" Grid.Row="1" Grid.ColumnSpan="2" Grid.RowSpan="2" HorizontalAlignment="Center" VerticalAlignment="Center" FontWeight="Bold"/>
         
-        <Label Content="Username:" Grid.Row="3" Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Center" Margin="5" FontWeight="Black"/>
+        <Label Content="Username:" Foreground="MintCream"   Grid.Row="3" Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Center" Margin="5" FontWeight="Black"/>
         <TextBox Name="UsernameTextBox" Grid.Row="3" Grid.Column="2" Grid.ColumnSpan ="2" Height="25" Width="200" />
 
-        <Label Content="Password:" Grid.Row="4" Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Center" Margin="5" FontWeight="Black"/>
+        <Label Content="Password:" Foreground="MintCream"   Grid.Row="4" Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Center" Margin="5" FontWeight="Black"/>
         <PasswordBox Name="PasswordBox" Grid.Row="4" Grid.Column="2" Grid.ColumnSpan ="2" Height="25" Width="200"/>
         
-        <Button Content="Sign In" Grid.Row="5" Grid.Column="3" Width="80" HorizontalAlignment="Center" Height="30" />
+        <Button Content="Sign In" Grid.Row="5" Grid.Column="3" Width="80" HorizontalAlignment="Center" Height="30" Click="Button_Click" />
 
-        <Button Content="Register" Foreground="SkyBlue" Grid.Row="5" Grid.Column="2" Width="80" HorizontalAlignment="Center" Height ="30" />
+        <Button Content="Register" BorderBrush="Transparent" Background="Transparent" Foreground="SkyBlue" Grid.Row="5" Grid.Column="2" Width="80" HorizontalAlignment="Center" Height ="30" Click="Button_Click_1" />
         <!--TODO-->
         <!--Om lösenord eller användarnamn fel: varningsmeddelande-->
 
